src/tests/terminal_snapshots/snapshots/terminal_snapshots__terminal_snapshots__terminai_approval_writes_exact_bytes__ghostty-vt.snap
---
source: src/tests/terminal_snapshots/support.rs
expression: snapshot
---
guest-ready
bytes: 73 70 61 63 65 20 74 61 62 09 6c 69 6e 65 0a 1b 03 c3 a9               
bytes-done                                                                    
                                                                              
                                                                              
                                                                              
                                                                              
                                                                              
                                                                              
                                                                              
                                                                              
                                                                              
                                                                                
                                                                              
                                                                               
                                                                              
                                                                              
                                                                              
                                                                              
                                                                              
                                                                              
                                                                              
                                                                              [0m[4;1H
